prow/cluster/components/gcsweb_tls_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: gcsweb-tls-ing
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gcsweb-prow
    networking.gke.io/managed-certificates: gcsweb-kyma-prow
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "gcsweb-frontend-config"
spec:
  rules:
  - host: gcsweb.build.kyma-project.io
    http:
      paths:
        - path: /*
          backend:
            service:
              name: gcsweb
              port:
                number: 80
